--- a/Starbuzz/about.html
+++ b/Starbuzz/about.html
@@ -18,7 +18,8 @@
 
     <div id="fixed"></div>
 
-    <div></div>
+    <div id="sticky"></div>
+    
 
     <p>Certes sole hordes globes ame raison. Au pentes je bourse me durcis la espace. Demeure ouvrent obtenue partout
         etaient une feu. Du tete avez tira la nees crie bles. Signalant rappelles vit incapable art escadrons.
